--- a/밑시딥1-2강-퍼셉트론.ipynb
+++ b/밑시딥1-2강-퍼셉트론.ipynb
@@ -62,13 +62,22 @@
     "    - 한계값을 **임계값**이라고 하고, $\\theta$로 표현\n",
     "- 퍼셉트론은 복수의 입력 신호 각각에 고유한 가중치 부여\n",
     "- 가중치는 각 신호가 결과에 주는 영향력을 조절하는 요소로 작용 (신호가 클수록 그만큼 중요하다는 것)\n",
-    "    \n",
-    "<img src=\"https://blog.kakaocdn.net/dn/b2gwyi/btqysNhyAXw/1rmfWOZukyoM3g2qkdFCp1/img.png\" width=\"300\" height=\"300\">"
+    "\n",
+    "<br/>\n",
+    "\n",
+    "$$\n",
+    "y = \\left\\{\n",
+    "    \\begin{array}\\\\\n",
+    "        0 & (w_1x_1 + w_2x_2 <= \\theta) \\\\\n",
+    "        1 & (w_1x_1 + w_2x_2 > \\theta) \\\\\n",
+    "    \\end{array}\n",
+    "\\right.\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b7255ab7",
+   "id": "aff9e50c",
    "metadata": {},
    "source": [
     "### 2.2 단순한 논리 회로\n",
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87d2cb3d",
+   "id": "a91e1662",
    "metadata": {},
    "source": [
     "#### 2.2.2 NAND 게이트와 OR 게이트\n",
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7396b460",
+   "id": "f3ce771a",
    "metadata": {},
    "source": [
     "<img src=\"https://t1.daumcdn.net/cfile/tistory/20563D534DFE0F9F18\" width=\"400\" height=\"400\">"
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc568f0b",
+   "id": "a5a458b9",
    "metadata": {},
    "source": [
     "### 2.3 퍼셉트론 구현하기\n",
@@ -111,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f6b33ea",
+   "id": "7fb3f977",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6757a233",
+   "id": "6f978d04",
    "metadata": {},
    "source": [
     "#### 2.3.2 가중치와 편향 도입\n",
@@ -147,12 +156,21 @@
     "- 여기에서 $b$를 **편향 (bias)**이라 하고, $w_1, w_2$는 그대로 가중치\n",
     "- 퍼셉트론은 입력 신호에 가중치를 곱한 값과 편향을 더해서, 출력값을 결정\n",
     "\n",
-    "<img src=\"https://t1.daumcdn.net/cfile/tistory/99B057465A65F39704\" width=\"300\" height=\"300\">"
+    "<br/>\n",
+    "\n",
+    "$$\n",
+    "y = \\left\\{\n",
+    "    \\begin{array}\\\\\n",
+    "        0 & (b + w_1x_1 + w_2x_2 <= 0) \\\\\n",
+    "        1 & (b + w_1x_1 + w_2x_2 > 0) \\\\\n",
+    "    \\end{array}\n",
+    "\\right.\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "349babf3",
+   "id": "f2aeff1f",
    "metadata": {},
    "source": [
     "#### 2.3.3 가중치와 편향 구하기\n",
@@ -167,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f5702ee0",
+   "id": "9797e111",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e35ab380",
+   "id": "88982ac5",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eb4187b7",
+   "id": "46a78841",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a001032",
+   "id": "5c5b20aa",
    "metadata": {},
    "source": [
     "\n",
@@ -275,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41fad178",
+   "id": "c25c70c0",
    "metadata": {},
    "source": [
     "### 2.4 퍼셉트론의 한계\n",
@@ -288,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10b7d704",
+   "id": "50ea2773",
    "metadata": {},
    "source": [
     "### 2.4.2 선형과 비선형\n",
@@ -302,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17d4c4b",
+   "id": "254673db",
    "metadata": {},
    "source": [
     "### 2.5 다층 퍼셉트론이 출동한다면\n",
@@ -317,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "919b49a7",
+   "id": "53fdf9e3",
    "metadata": {},
    "source": [
     "#### 2.5.2 XOR 게이트 구현하기"
@@ -326,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8ce8948d",
+   "id": "8b5bd209",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa946d1",
+   "id": "f6a8d418",
    "metadata": {},
    "source": [
     "- XOR 게이트는 다음과 같은 다층 구조의 네트워크\n",
@@ -369,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b22296d",
+   "id": "f941eee8",
    "metadata": {},
    "source": [
     "### 2.6 NAND에서 컴퓨터까지\n",
